# P4P-CapsuleNetworkAccelerator

./: .clang-format  .gitignore  README.md
accel/app/CapsuleNetwork/: app_build.sh  app_test.sh  setup.sh
datasets/MNIST/: testimg.txt
deployment/: capsNet.py  capsulelayers.py  capsulenet.py  compile.sh  create_partial_model.py  quantizer.py
deployment/compiled_model/: md5sum.txt  meta.json
deployment/dump_results/dump_results_0/: primarycap_squash_float.txt  quant_conv1.txt  quant_conv1_float.txt  quant_input_1_float.txt  quant_primarycap_conv2d.txt  quant_primarycap_conv2d_float.txt
docs/: README.md  acceleration.txt  quantizer_log.txt
models/: conv1_biases.txt  conv1_weights.txt  primcaps_biases.txt  quant_conv1_kernel_float.txt  quant_primarycap_conv2d_bias_float.txt
models/accurate/: README.md
scripts/: compare.py
src/floating/: CapsuleLayer.cpp  CapsuleNetwork.cpp  CapsuleNetwork.h  DigitCaps.cpp  DigitCaps.h  PrimaryCaps.cpp  PrimaryCaps.h  ReLUConv1.cpp  ReLUConv1.h
src/python/: CapsuleLayer.py  runPythonCapsuleLayer.py
src/util/: constants.h
test/: CMakeLists.txt  CapsuleNetworkTestbench.cpp  README.md
test/dump/: output_conv_1.txt  output_digit_caps.txt  output_prim_caps.txt
test/floating/: CapsuleLayer.h  CapsuleNetwork.cpp  CapsuleNetwork.h  CapsuleNetworkTest.h  DigitCaps.cpp  PrimaryCaps.cpp  PrimaryCaps.h  ReLUConv1.cpp  ReLUConv1.h
test/util/: constants.h  testing_suite.h
vitishls/: CapsuleNetwork.cpp  CapsuleNetworkTestbench.cpp  DigitCaps.cpp  PrimaryCaps.cpp  ReLUConv1.cpp  compile_commands.json  hls_config.cfg  vitis-comp.json
vitishls/iter/: DigitCaps.cpp  PrimaryCaps_140824.cpp  PrimaryCaps_310724.cpp
vitishls/projects/project_1/primary_caps_accel/primary_caps_accel/hls/impl/misc/drivers/process_features_v1_0/src/: CMakeLists.txt  xprocess_features_sinit.c
(+490 files in other folders)
